Write intTreeNode tests

--- a/cs237lab9/cs237lab9.vcxproj.filters
+++ b/cs237lab9/cs237lab9.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="intBinTree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="testIntTreeNode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
