--- a/cs237lab9/cs237lab9.vcxproj
+++ b/cs237lab9/cs237lab9.vcxproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <ClCompile Include="intBinTree.cpp" />
     <ClCompile Include="intTreeNode.cpp" />
+    <ClCompile Include="testIntTreeNode.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
