Write testIntBinTree.cpp

--- a/cs237lab9/cs237lab9.vcxproj.filters
+++ b/cs237lab9/cs237lab9.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="intBinTree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="testIntTreeNode.cpp">
+    <ClCompile Include="testIntBinTree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
